# MGNREGA_assets

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_bihar.py  run_bihar_details_only.py  smoke_test_bihar.py
src/mgnrega_assets/: __init__.py  categorization.py  detail_extractor.py  pipeline.py  settings.py
